<resources>
    <string name="app_name">Quiz App</string>
    <string name="default_username">User</string>

        <!--  Buttons  -->
    <string name="username_edit_bth_text">Edit</string>
    <string name="play_bth_text">Play</string>
    <string name="play_with_friends_bth_text">Play with friends</string>
    <string name="play_online_text">Play online</string>
    <string name="back_btn">Back</string>
    <string name="start_btn">Start</string>
    <string name="exit_btn">Exit</string>
    <string name="logout_btn">Log out</string>
    <string name="next_btn">Next</string>
    <string name="overplay_btn">Overplay</string>
    <string name="create_btn">Create</string>
    <string name="ready_btn">Ready</string>

        <!--    Text    -->
    <string name="level_number">%d/%d</string>
    <string name="user_questions_number">Your scores: %d</string>
    <string name="total_questions_number">Total scores: %d</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_high">Hard</string>
    <string name="question_number">%d/%d</string>
    <string name="title_category_choice">Choose the category</string>
    <string name="title_multiplayer_options">Choose number of players</string>
    <string name="results_title_text">Final score</string>
    <string name="win_title_text">Win</string>
    <string name="win_text">Amazing! Everything was good!</string>
    <string name="lose_title_text">Loss</string>
    <string name="lose_text">Oh, no! Try again</string>
    <string name="warning_text">Click when you are ready to start</string>
    <string name="ok">OK</string>
    <string name="options_dialog_text">You have to enter the names of the players</string>
    <string name="network_error_dialog_text">Please, check Internet connection and try again</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_room">New room</string>
    <string name="players_number">Players number</string>
    <string name="difficulty">Difficulty</string>
    <string name="category">Category</string>
    <string name="room_created">Room with code %s created</string>
    <string name="all_rooms">All</string>
    <string name="my_rooms">My</string>
    <string name="players">Players:\n%s</string>
    <string name="unselected_category">No category selected</string>
    <string name="no_categories">The quiz topics will be displayed here</string>
    <string name="no_rooms">The available rooms will be displayed here</string>
    <string name="dialog_error_title">Oops.. Some error occurred</string>
    <string name="try_again">Try again</string>


        <!--    EditText    -->
    <string name="username_change_hint">Enter new username</string>
    <string name="player_input_hint">Player %d</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="search_room">Search room by code</string>

    <string name="empty_username_error">Enter a username</string>
    <string name="incorrect_username_error">Username must contain only Latin alphabetic characters</string>
    <string name="email_error">Incorrect email</string>
    <string name="password_length_error">Password must be at least 8 characters long</string>
    <string name="password_upper_case_char_error">Password must contain upper case character</string>
    <string name="password_lower_case_char_error">Password must contain lower case character</string>
    <string name="password_digit_char_error">Password must contain digit</string>
    <string name="passwords_not_equals_error">Passwords not equals</string>
    <string name="account_created">Account was successfully created</string>


        <!--  Exceptions  -->
    <string name="too_many_requests">The number of request attempts exceeded</string>
    <string name="page_not_found">Can\'t find anything</string>
    <string name="bad_request">Request is incorrect</string>
    <string name="unauthorized">Reauthorization is required</string>
    <string name="server_exception">Server is not response</string>
    <string name="empty_questions_list_response">Questions not found</string>
    <string name="empty_categories_list_response">Categories not found</string>
    <string name="connection_exception">Сan\'t connect to the server</string>
    <string name="unknown_error">Unknown error occurred</string>

</resources>