<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/baseline_account_circle_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:text="@string/play_bth_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_with_friends_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/play_with_friends_bth_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_online_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/play_online_text"
        app:backgroundTint="?attr/colorPrimaryVariant" />

</LinearLayout>