<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username_tv"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/theme_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/theme_btn"
        tools:text="Username" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/theme_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/sun_svgrepo_com"
        android:tint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/username_edit_btn"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username_edit_bth_text"
        android:backgroundTint="@color/yellow_green"
        app:layout_constraintBottom_toBottomOf="@id/username_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_et_layout"
        style="@style/DefaultEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/username_change_hint"
        app:layout_constraintTop_toBottomOf="@id/username_tv"
        android:visibility="gone" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            style="@style/DefaultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_questions_tv"
        style="@style/DefaultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/user_questions_number"
        app:layout_constraintTop_toBottomOf="@id/username_et_layout"
        tools:text="Your questions: 97"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_questions_tv"
        style="@style/DefaultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_questions_number"
        app:layout_constraintTop_toBottomOf="@id/user_questions_tv"
        tools:text="Total questions: 120"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>